# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-30 21:52:26 GMT	John Goerzen <jgoerzen@complete.org>	patch-133

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-133


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     testsrc/ConfigParser/Maintest.hs


2004-11-30 20:57:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-132

    Summary:
      Checkpointing doc progress
    Revision:
      missingh--head--0.5--patch-132


    new files:
     testsrc/ConfigParser/test.cfg

    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     testsrc/ConfigParser/Maintest.hs


2004-11-30 20:34:05 GMT	John Goerzen <jgoerzen@complete.org>	patch-131

    Summary:
      Added some CP docs
    Revision:
      missingh--head--0.5--patch-131


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs


2004-11-30 20:16:36 GMT	John Goerzen <jgoerzen@complete.org>	patch-130

    Summary:
      More rearranging
    Revision:
      missingh--head--0.5--patch-130


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Types.hs
     testsrc/ConfigParser/Maintest.hs


2004-11-30 20:12:08 GMT	John Goerzen <jgoerzen@complete.org>	patch-129

    Summary:
      Moved some stuff out of CP typse that didn't belong there anyway
    Revision:
      missingh--head--0.5--patch-129


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Types.hs


2004-11-30 20:01:53 GMT	John Goerzen <jgoerzen@complete.org>	patch-128

    Summary:
      Added tests for no default situation
    Revision:
      missingh--head--0.5--patch-128


    modified files:
     ChangeLog testsrc/ConfigParser/Maintest.hs


2004-11-30 18:45:21 GMT	John Goerzen <jgoerzen@complete.org>	patch-127

    Summary:
      Updated tests
    Revision: